--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r dotenv/config index.js dotenv_config_path=./.env.local/index.js"
+    "dev": "nodemon -r dotenv/config index.js dotenv_config_path=./.env.local"
   },
   "keywords": [],
   "author": "",
