--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,24 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
             "command": "npm start",
             "name": "Run npm start",
             "request": "launch",
             "type": "node-terminal"
         },
-
-        {
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/app.js",
-            "request": "launch",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "type": "node"
-        },
-
         {
             "name": "Attach",
             "port": 9229,
@@ -31,14 +19,17 @@
             ],
             "type": "node"
         },
+
+
         {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
+            "name": "Attach",
+            "port": 9229,
+            "request": "attach",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\index.js"
+            "type": "node"
         }
+
     ]
 }
