--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "joi": "^17.10.0",
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
-    "mongoose": "^7.4.4",
+    "moment-timezone": "^0.5.43",
+    "mongoose": "^6.10.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.0.1"
