--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "joi": "^17.10.0",
     "jsonwebtoken": "^9.0.1",
+    "luxon": "^3.4.3",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "mongoose": "^6.10.1",
